[tool.poetry]
name = "chatbot-python"
version = "0.0.1"
description = "CDP AgentKit Example Chatbot"
authors = ["John Peterson <john.peterson@coinbase.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"

# Existing dependencies from your snippet:
langchain-ollama = "^0.2.3"
langgraph = "^0.2.70"
langchain-experimental = "^0.3.4"
torch = "^2.0.0"
torchvision = "^0.15.0"
torchaudio = "^2.0.1"

# Additional dependencies needed by your script:
spacy = "^3.5"
textstat = "^0.7"
transformers = "^4.26"
scikit-learn = "^1.2"
sentence-transformers = "^2.2.2"


# If you need 'cdp' itself (for sign_payload, etc.), but it's not on PyPI:
# cdp = { git = "https://github.com/your-org/cdp.git", branch = "main" }
qdrant-client = "^1.13.2"
langchain = "^0.3.18"
cdp-langchain = "^0.0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
